Quorum/Library/Tests/Inheritance/Pass/ASolo.quorum
class A 
    action Main
        
    end
end