Quorum/Library/Tests/Inheritance/Fail/WrongBlueprintMain.quorum
class WrongBlueprintMain 
    action Main
        WrongBlueprint wrong
    end
end